<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivDrawling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_drawling_world" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCreateRoom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/create_a_new_room"
        android:textAlignment="center"
        android:textSize="@dimen/create_room_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDrawling" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRoomName"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xxxlarge"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/room_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreateRoom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRoomName"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRoomWordList"
        style="@style/DropDownStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:hint="@string/room_word_list"
        app:layout_constraintEnd_toEndOf="@+id/tilRoomName"
        app:layout_constraintStart_toStartOf="@+id/tilRoomName"
        app:layout_constraintTop_toBottomOf="@+id/tilRoomName">

        <AutoCompleteTextView
            android:id="@+id/tvRoomWordList"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:labelFor="@id/tvRoomWordList"
            android:text="@string/default_word_list" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRoomSize"
        style="@style/DropDownStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:hint="@string/room_size"
        app:layout_constraintEnd_toEndOf="@id/tilRoomWordList"
        app:layout_constraintStart_toStartOf="@id/tilRoomWordList"
        app:layout_constraintTop_toBottomOf="@id/tilRoomWordList">

        <AutoCompleteTextView
            android:id="@+id/tvMaxPersons"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:labelFor="@id/tvMaxPersons"
            android:text="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/create_room"
        app:layout_constraintEnd_toEndOf="@+id/tilRoomWordList"
        app:layout_constraintStart_toStartOf="@+id/tilRoomWordList"
        app:layout_constraintTop_toBottomOf="@+id/tilRoomSize" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/createRoomProgressBar"
        android:layout_width="@dimen/loading_animation_size"
        android:layout_height="@dimen/loading_animation_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilRoomSize"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>