<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRoomName"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xstandard"
        android:hint="@string/search_for_rooms"
        app:layout_constraintEnd_toStartOf="@+id/ibReload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRoomName"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/ibReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/rvRooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_refresh" />

    <ImageView
        android:id="@+id/ivNoRoomsFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tvNoRoomsFound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_sad_monkey" />

    <TextView
        android:id="@+id/tvNoRoomsFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_rooms_found"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:textSize="@dimen/text_size_no_rooms"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvRooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvRooms" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRooms"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilRoomName" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/roomsProgressBar"
        android:layout_width="@dimen/loading_animation_size"
        android:layout_height="@dimen/loading_animation_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvRooms"
        app:layout_constraintEnd_toEndOf="@+id/rvRooms"
        app:layout_constraintStart_toStartOf="@+id/rvRooms"
        app:layout_constraintTop_toTopOf="@+id/rvRooms"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateRoom"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>